[gd_scene load_steps=4 format=3 uid="uid://cqshdkmvwj3kb"]

[ext_resource type="Script" uid="uid://df1acsvgi6527" path="res://scenes/game/tool_display.gd" id="1_k0wtb"]
[ext_resource type="Texture2D" uid="uid://dkraojdcl1b4o" path="res://assets/tools/time_.png" id="2_vny0p"]

[sub_resource type="Theme" id="Theme_u4ayq"]
default_font_size = 12

[node name="ToolDisplay" type="GridContainer"]
offset_right = 44.0
offset_bottom = 32.0
theme = SubResource("Theme_u4ayq")
columns = 2
script = ExtResource("1_k0wtb")

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("2_vny0p")
stretch_mode = 4

[node name="Count" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 0
text = "0000"

[node name="Filler" type="Control" parent="."]
layout_mode = 2

[node name="Change" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 8

[node name="UpdateTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[connection signal="timeout" from="UpdateTimer" to="." method="update_count"]
[connection signal="timeout" from="BlinkTimer" to="." method="blink"]
